--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: lmerTest
 Type: Package
 Title: Tests for random and fixed effects for linear mixed effect
         models (lmer objects of lme4 package).
-Version: 1.2-0
+Version: 1.2-1
 Date: 2012-01-09
 Author: Alexandra Kuznetsova, Per Bruun Brockhoff, Rune Haubo Bojesen
         Christensen
-Maintainer: Alexandra Kuznetsova <alku@imm.dtu.dk>
+Maintainer: Alexandra Kuznetsova <alku@dtu.dk>
 Depends: Matrix, stats, methods, lme4
 Imports: numDeriv, MASS, Hmisc, gplots, pbkrtest
 Description: The package provides different kinds of tests on lmer
@@ -16,7 +16,7 @@ Description: The package provides different kinds of tests on lmer
         and corresponding plots. Package also provides backward
         elimination of non-significant effects
 License: GPL (>= 2)
-Packaged: 2013-03-19 12:40:04 UTC; Romario
+Packaged: 2013-06-17 20:44:11 UTC; alku
 Repository: CRAN
-Date/Publication: 2013-03-20 09:28:26
+Date/Publication: 2013-06-18 00:03:33
 NeedsCompilation: no
